--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -17,13 +17,14 @@
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
-           android:src="@drawable/ic_hotel_key"/>
+           android:src="@drawable/ic_hotel_key"
+           android:id="@+id/key"/>
 
        <pl.droidsonroids.gif.GifImageView
            android:layout_marginTop="50dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
-           android:src="@drawable/double_ring" />
+           android:src="@drawable/load" />
 
        <TextView
            android:textSize="30sp"
