--- a/app/src/main/res/layout/activity_show_details.xml
+++ b/app/src/main/res/layout/activity_show_details.xml
@@ -6,6 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".activity.show_details">
 
+    <Switch
+        android:id="@+id/switch1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="Switch" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
